# niperamani_rust_api

./: Cargo.toml
src/: db.rs  main.rs  routes.rs
src/handlers/: auth.rs  mod.rs  sites.rs
src/models/: mod.rs  site.rs  user.rs
src/utils/: email.rs  jwt.rs  mod.rs
