[package]
name = "niperamani_rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lettre = { version = "0.11.19", features = ["tokio1-rustls-tls", "builder", "tokio1-native-tls"] }
rust_decimal = { version = "1.40.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "mysql", "runtime-tokio-rustls", "rust_decimal"] }
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.22.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
